# mymath

./: .travis.yml  NEWS.rst  Pipfile  README.rst  pyproject.toml  setup.cfg  tox.ini
mymath/: __init__.py
mymath/newsfragments/: 2.feature
tests/: test_it.py
