[egg_info]
tag_build = dev
tag_date = 1

[metadata]
name = mymath
version = attr: mymath.__version__
author = Atsushi Odagiri
author_email = aodagx@gmail.com
url = https://github.com/aodag/mymath
license = MIT
description = sample package
long_description = file: README.rst

[options]
